# kobra

./: .gitignore  README.md  build.sh  dependencies.sh  uhaptikfabriken.h
autostart/: README.md  mount.desktop  nvidia-settings.desktop  ssh.desktop  wisdomlauncher.desktop
external_linux/spidermonkey_js_engine/: install.sh
forssim-0.3.1/: readme.md
forssim-0.3.1/examples/: adrillforce.x3d  adrillforce_fakestylus.x3d  cdrillforce-cutting-mc.x3d  cdrillforce-cutting.x3d  cdrillforce.x3d  pedal.x3d  readme.txt  transform-test.x3d  viewpointCalc.py
forssim-0.3.1/examples/cylinder/: cylinder.x3d  inspectData  readme.txt
forssim-0.3.1/examples/meshes/: drill.x3d
forssim-0.3.1/src/: ADrillForce.cpp  ADrillForce.h  ADrillableNode.cpp  ADrillableNode.h  AHapticDrillForce.cpp  AHapticDrillForce.h  AVolumePlaybackNode.cpp  AVolumePlaybackNode.h  CDrillForce.cpp  CDrillForce.h  CHapticDrillForce.cpp  CHapticDrillForce.h  DataBounds.h  FloatSwitch.cpp  FloatSwitch.h  ForbiddenSegmentationModel.cpp  ForbiddenSegmentationModel.h  ForssimInfo.cpp  IntervalCollisionDetector.cpp  IntervalCollisionDetector.h  MCWithDistance.cpp  MCWithDistance.h  MCWithRange.cpp  MCWithRange.h  MFDoubleFromNrrdFile.h  MFUnsignedInt8.h  MFUnsignedInt8FromNrrdFile.h  MFieldFromNrrdFile.h  MaterialSegmentationModel.cpp  MaterialSegmentationModel.h  PartitionModel.cpp  PartitionModel.h  PedalNode.cpp  PedalNode.h  SFUnsignedInt8.h  SmoothingMask.cpp  SmoothingMask.h  Vec3i.h  VolumeModel.cpp  VolumeModel.h  (+8 more)
forssim-0.3.1/util/: nrrdValues.py
h3d/: .gitignore  revision.txt
h3d/H3DAPI/: README.md  changelog
h3d/H3DAPI/Util/: AddExampleLinksToHeaders.py  CheckExample.py  Doxyfile  GenerateExamplesHTML.py  GenerateSG.py  TypedFieldAnyTmpl.py  TypedFieldTypesTmpl.py  UpdateH3DInterface_py_h.py
h3d/H3DAPI/Util/CheckH3DAgainstX3DSpec/: CMakeLists.txt  CheckH3DAgainstX3DSpec.cmake
h3d/H3DAPI/Util/CreateH3DNodesFieldsList/: CMakeLists.txt  CreateH3DNodesFieldsList.cmake
h3d/H3DAPI/Util/NodeRoutesToDotFile/: CMakeLists.txt  NodeRoutesToDotFile.cmake
h3d/H3DAPI/Util/UpdateResourceFile/: CMakeLists.txt  UpdateResourceFile.cpp
h3d/H3DAPI/examples/ThreadExample/: CMakeLists.txt  ThreadExample.cpp  ThreadExample.h  ThreadExample.x3d
h3d/H3DAPI/examples/manualExamples/C++/: CMakeLists.txt  Sphere_X3D.cpp  Spheres_X3D.cpp
h3d/H3DAPI/lib/: H3DInterface.py  H3DUtils.py
h3d/H3DAPI/settings/: h3dload.ini
h3d/H3DAPI/src/: Anchor.cpp  AnyDevice.cpp  Appearance.cpp  Arc2D.cpp  ArcClose2D.cpp  AudioClip.cpp  AudioFileReader.cpp  Background.cpp  Billboard.cpp  BooleanFilter.cpp  BooleanSequencer.cpp  BooleanToggle.cpp  BooleanTrigger.cpp  Bound.cpp  BoundedPhysicsModel.cpp  Box.cpp  Capsule.cpp  Circle2D.cpp  ClipPlane.cpp  ClutchedDevice.cpp  Collision.cpp  CollisionOptions.cpp  Color.cpp  ColorInterpolator.cpp  ColorRGBA.cpp  Composed3DTexture.cpp  ComposedCubeMapTexture.cpp  ComposedGeneratedShader.cpp  ComposedShader.cpp  Cone.cpp  ConeEmitter.cpp  Contour2D.cpp  ContourPolyline2D.cpp  ConvolutionFilterShader.cpp  CoordBoundField.cpp  Coordinate.cpp  CoordinateDeformer.cpp  CoordinateDouble.cpp  CoordinateInterpolator.cpp  CoordinateInterpolator2D.cpp  (+343 more)
h3d/H3DPhysics/: README.md  changelog
h3d/H3DPhysics/doc/: AddExampleLinksToHeaders.py  CheckExample.py  Doxyfile  ExamplesTest.py
h3d/H3DPhysics/src/: ArticulatedRigidBody.cpp  BallJoint.cpp  BodyPID.cpp  BulletAttachmentOptions.cpp  BulletCallbacks.cpp  BulletCollidableOptions.cpp  BulletJoints.cpp  BulletRigidBodyOptions.cpp  BulletSoftBodyOptions.cpp  BulletWorldOptions.cpp  Cloth.cpp  CollidableExceptionGroup.cpp  CollidableGroup.cpp  CollidableOffset.cpp  CollidableSelectionGroup.cpp  CollidableShape.cpp  CollisionCollection.cpp  CollisionSensor.cpp  CollisionSpace.cpp  Contact.cpp  DistanceJoint.cpp  DoubleAxisHingeJoint.cpp  FEMDeformationStrategy.cpp  FEMPhysicsMaterial.cpp  FixedConstraint.cpp  FixedJoint.cpp  FunctionSoftBodyModifier.cpp  Generic6DOFJoint.cpp  GmshSoftBodyLoader.cpp  H3DAdjacencySoftBodyDeformer.cpp  H3DAttachmentNode.cpp  H3DBodyConstraintNode.cpp  H3DBodyInteractorNode.cpp  H3DBodyModifierNode.cpp  H3DBodyNode.cpp  H3DDeformationStrategyNode.cpp  H3DDeviceSoftBodyModifierNode.cpp  H3DEngineOptions.cpp  H3DGeometryMapping.cpp  H3DJointNode.cpp  (+82 more)
h3d/H3DUtil/: README.md  changelog
h3d/H3DUtil/doc/: Doxyfile
h3d/H3DUtil/src/: AutoRef.cpp  AutoRefVector.cpp  Console.cpp  DicomImage.cpp  DualQuaternion.cpp  DynamicLibrary.cpp  Exception.cpp  FreeImageImage.cpp  H3DTimer.cpp  H3DUtil.cpp  Image.cpp  LoadImageFunctions.cpp  Matrix3d.cpp  Matrix3f.cpp  Matrix4d.cpp  Matrix4f.cpp  PixelImage.cpp  Quaternion.cpp  Quaterniond.cpp  RefCountedClass.cpp  ResourceResolver.cpp  Rotation.cpp  Rotationd.cpp  ThreadPool.cpp  Threads.cpp  TimeStamp.cpp  URNResolver.cpp  Vec2f.cpp  (+2 more)
h3d/MedX3D/: README.md  changelog  medx3d.txt  notes.txt  test_plugin.htm
h3d/UI/: README.md  changelog
h3d/bin64/: fish.bat  fish.x3d
haptikfabrikenapi/: .gitignore  haptikfabrikenapi.pro  readme.md  revision.txt
haptikfabrikenapi/src/: fsdaqhapticdevicethread.cpp  fsdaqhapticdevicethread.h  fshapticdevicethread.cpp  fshapticdevicethread.h  fsusbhapticdevicethread.cpp  fsusbhapticdevicethread.h  haptikfabrikenapi.cpp  haptikfabrikenapi.h  kinematics.cpp  kinematics.h  main.cpp  webserv.cpp  webserv.h
haptikfabrikenapi/winbin/: libboost_chrono-vc140-mt-1_62.lib  libboost_chrono-vc140-mt-gd-1_62.lib  libboost_context-vc140-mt-1_62.lib  libboost_context-vc140-mt-gd-1_62.lib  libboost_coroutine-vc140-mt-1_62.lib  libboost_coroutine-vc140-mt-gd-1_62.lib  libboost_date_time-vc140-mt-1_62.lib  libboost_date_time-vc140-mt-gd-1_62.lib  libboost_system-vc140-mt-1_62.lib  libboost_system-vc140-mt-gd-1_62.lib  libboost_thread-vc140-mt-1_62.lib  readme.md
networkconfigs/: NetworkManager.conf  backup.sh  blacklist.conf  dnsmasq.conf  hostapd.conf  install.sh  interfaces  rc.local
networkconfigs/backup/: NetworkManager.conf  interfaces
networkconfigs/ubuntureset/: install.sh
pedal/: 50-infinity-in-usb-2.rules  install-pedal.sh  pedal2.c
xorg/: xorg.conf
(+1463 files in other folders)
